--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,8 @@ html {
 }
 
 body {
-  background-color: rgb(241, 243, 243);
+  background-color: #f3f2ef;
+  /* rgb(241, 243, 243) */
 }
 
 .center {
